# 8-BIT-CPU

./: .gitignore  CPU.circ  README.md
ASM/: CMakeLists.txt  build.ps1  build.sh
ASM/src/: io.asm  lib.asm  main.asm
RV64ISC/: compile.ps1
RV64ISC/docs/: instructions.md
RV64ISC/docs/kernel/: register_file.md
RV64ISC/src/kernel/: decoder.v  mux.v  register_file.v
RV64ISC/src/kernel/alu/: alu.v  base_alu.v
RV64ISC/synth/: synth.ys
RV64ISC/tbs/kernel/alu/: alu_tb.v  base_alu_tb.v
verilog/: and_gate.v  run.ps1
verilog/src/: alu.v  cpu.v  decoder.v  full_adder.v  full_adder_8bit.v  program_counter.v  ram_emu.v  registry_bank.v  registry_file.v
verilog/tbs/: alu_register_file_tb.v  alu_tb.v  and_gate_tb.v  cpu_tb.v  full_adder_8bit_tb.v  full_adder_tb.v  program_counter_tb.v  register_file_tb.v  registry_bank_tb.v
